--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint-plugin-react-hooks": "^5.0.0-next-ee8509801-20230117",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.3"
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.2.0",
